2000-07-21  Greg McGary  <greg@mcgary.org>

	* sysdeps/powerpc/bp-asm.h (DISCARD_BOUNDS): Rename from UNCHECK_BOUNDS.
	* sysdeps/powerpc/bits/setjmp.h (JB_SIZE): New constant.
	* sysdeps/powerpc/elf/libc-start.c (__libc_start_main):
	Wrap bounds around argv & envp and each of their string members.
	* sysdeps/powerpc/elf/start.S: Designate BP symbols.
	* sysdeps/unix/sysv/linux/powerpc/brk.S: Wrap entry-point
	symbol in BP_SYM ().  Discard bounds of address arg.
	* sysdeps/unix/sysv/linux/powerpc/clone.S: Likewise.
	* sysdeps/unix/sysv/linux/powerpc/mmap64.c (__mmap64):
	Discard bounds on address arg, add bounds to return value.

2000-07-20  Ulrich Drepper  <drepper@redhat.com>

	* elf/Makefile (tests): Add filter.  Add rules to generate filter.
	* elf/filter.c: New file.
	* elf/filtmod1.c: New file.
	* elf/filtmod2.c: New file.

	* elf/rtld.c: Define _dl_bind_not variable.
	(process_envvars): Recognize LD_BIND_NOT and set _dl_bind_not.
	* elf/dl-support.c: Likewise.
	* sysdeps/generic/ldsodefs.h: Declare _dl_bind_not.
	* elf/dl-runtime.c (fixup): Don't remember looked up value if
	_dl_bind_not.
	(profile_fixup): Likewise.

	* libio/Makefile (routines): Add fwide.
	* libio/iofwide.c (_IO_fwide): Remove locking.  This is done in
	fwide now.  Internal calls to _IO_fwide must do locking themselves
	or don't need locking.
	* libio/fwide.c: New file.

	* elf/dl-load.c (_dl_map_object): Implement handling of DF_1_NODEFLIB.

	* elf/Makefile: Add no modules for nodelete test.
	* elf/nodelmod3.c: New file.
	* elf/nodelmod4.c: New file.
	* elf/nodelete.c: Also test case where dependency of dlopen() object
	is marked nodelete.

	* elf/Makefile (tests): Add nodlopen.  Add rules to generate nodlopen.
	* elf/nodlopen.c: New file.
	* elf/nodlopenmod.c: New file.
	* include/dlfcn.h: Define __RTLD_DLOPEN.
	* elf/dl-load.c (_dl_map_object_from_fd): If DF_1_NOOPEN is set
	and this is a dlopen() call, do not load the binary.